fix scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,15 @@
     pointer-events: none;
 }
 .scrollContainer {
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 100vh;
     width: 100%;
     z-index: 2;
     font-size: 10em;
-    overflow: auto;
     font-family: 'Roboto', sans-serif;
-    color: #f5ff00
+    color: #f5ff00;
+    overflow: scroll;
 }
 
 .scroll {
